src/snapshots/roughly__format__test__binary_operator-8.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            foo |>\n                # something about bar\n                bar |>\n                # something about baz\n                baz\n            foo |># 1\n                # 2\n                    bar |> # 3\n                # 4\n                # 5\n                # 6\n                    baz\n        \"#\n}).unwrap()"
---
foo |>
  # something about bar
  bar |>
  # something about baz
  baz
foo |> # 1
  # 2
  bar |> # 3
  # 4
  # 5
  # 6
  baz
