src/snapshots/roughly__format__test__call-3.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            list  (\n                # foo\n                a = 1, #bar\n                b= 2L\n                # baz\n                ) #qux\n        \"#\n}).unwrap()"
---
list(
  # foo
  a = 1, # bar
  b = 2L
  # baz
) # qux
