src/snapshots/roughly__format__test__call-4.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            foo  ( #foo\n                # foo\n                f\n                # foo bar\n                #   foo bar\n                #   foo bar\n                a = 1, #bar\n\n\n                b= 2L) #baz\n\n                # foo\n        \"#\n}).unwrap()"
---
foo(
  # foo
  # foo
  f
  # foo bar
  #   foo bar
  #   foo bar
  a = 1, # bar

  b = 2L
) # baz

# foo
