src/snapshots/roughly__format__test__if_statement_comments-2.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            if (\n            # foo\n            {\n                TRUE\n            }) {}\n\n            if ({\n                TRUE\n            }\n            # foo\n            ) {}\n            \"#\n}).unwrap()"
---
if (
  # foo
  {
    TRUE
  }
) {}

if (
  {
    TRUE
  }
  # foo
) {}
