src/snapshots/roughly__format__test__if_statement_comments-3.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{ r#\"\n            if (foo) #foo\n                foo\n            \"# }).unwrap()"
---
if (foo) # foo
{
  foo
}
